Fixed some tests and made some changes to these and InvalidColorException to remove warnings